<resources>
    <string name="app_name">WeeW</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home_page">homePage</string>
    <string name="sport">Sport</string>
    <string name="food">Food</string>
    <string name="nightlife">NightLife</string>
    <string name="other">Other</string>
    <string name="study_group">Study Group</string>
    <string name="travel">Travel</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyCck4f7Vd2AyUUrKwAetU4bT36Krrgjx2g</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <!-- Strings related to home Page -->

</resources>
