<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mobserve.weew.weew.homePage"
    tools:showIn="@layout/activity_home_page">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tabHostHome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <GridLayout
                    android:id="@+id/Events"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="2"
                    android:rowCount="3"
                    >


                    <Button
                        android:id="@+id/sportButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sport"
                        android:layout_gravity="fill"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:background="#BE2625"/>

                    <Button
                        android:id="@+id/nightlifeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nightlife"
                        android:layout_gravity="fill"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:background="#DF5B5A"
                        />

                    <Button
                        android:id="@+id/foodButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food"
                        android:layout_gravity="fill"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:background="#82B482"
                        />

                    <Button
                        android:id="@+id/StudyGroupButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/study_group"
                        android:layout_gravity="fill"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:background="#B9D5B9"
                        />

                    <Button
                        android:id="@+id/TravelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/travel"
                        android:layout_gravity="fill"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:background="#34C2A1"
                        />

                    <Button
                        android:id="@+id/otherButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:layout_gravity="fill"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:background="#B3F6E3"
                        />

                </GridLayout>

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <GridLayout
                    android:id="@+id/Create"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="1"
                    android:rowCount="4">


                    <Spinner
                        android:id="@+id/eventTypeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Category of the event"
                        android:minWidth="200dp"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="2"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="Date of the event"
                        android:ems="10"
                        android:id="@+id/eventDateText"
                        android:focusable="false"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"/>

                    <Button
                        android:text="Submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/submitButton"
                        android:layout_marginTop="12dp"
                        android:background="#BE2625"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"/>
                    /RelativeLayout>
                    <!--
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="Event Date and time"
                        android:ems="10"
                        android:id="@+id/eventDateText" />

                    <CalendarView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/calendarView" />

                    <TimePicker
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/timePicker" />
                    !-->

                </GridLayout>

                </ScrollView>


                <GridLayout
                    android:id="@+id/Map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:rowCount="3"
                    android:columnCount="2">

                </GridLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>
